--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/content": "^2.13.2",
     "@nuxt/image": "^1.7.0",
     "@primevue/themes": "^4.0.4",
     "next-auth": "4.21.1",
