Corrections on workflow

--- a/.github/workflows/new_posts.yml
+++ b/.github/workflows/new_posts.yml
@@ -1,8 +1,10 @@
 name: Generate New Posts
 
 on:
+  push:
+    branches:
+      - master
   schedule:
-    - push
     - cron: '0 0 * * *'
       
 jobs:
