Donation with Stripe

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,10 @@ NUXT_AUTH0_CLIENT_ID=
 NUXT_AUTH0_CLIENT_SECRET=
 # In your Auth0 dashboard: Application > Basic Information > Domain
 NUXT_AUTH0_ISSUER=https://**********.us.auth0.com
+
+# Stripe
+#
+# Developers > API Keys > Secret key
+NUXT_STRIPE_SECRET_KEY=sk_**********
+# URL to redirect the user after successful checkout
+NUXT_STRIPE_SUCCESS_URL=http://localhost:3000
