--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@nuxt/content": "^2.13.2",
     "@nuxt/image": "^1.7.0",
     "@primevue/themes": "^4.0.4",
+    "@stripe/stripe-js": "^4.5.0",
     "next-auth": "4.21.1",
     "nuxt": "^3.12.4",
     "nuxt-posthog": "^1.5.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.0.4",
+    "stripe": "^16.12.0",
     "tailwindcss-primeui": "^0.3.4",
     "vue": "^3.4.37",
     "vue-router": "^4.4.3"
