--- a/.github/workflows/new_posts.yml
+++ b/.github/workflows/new_posts.yml
@@ -1,6 +1,9 @@
 name: Generate New Posts
 
 on:
+  push:
+    branches:
+      - master
   schedule:
     - cron: '0 0 * * *'
       
@@ -22,6 +25,7 @@ jobs:
         run: |
           cd python/scraper/eletrificado
           scrapy crawl electrek -O ../../electrek.json
+          scrapy crawl insideevs -O ../../insideevs.json
       - name: Generate MD post files
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
