--- a/.github/workflows/new_posts.yml
+++ b/.github/workflows/new_posts.yml
@@ -1,11 +1,8 @@
 name: Generate New Posts
 
 on:
-  push:
-    branches:
-      - master
   schedule:
-    - cron: '0 0 * * *'
+    - cron: '0 6 * * *'  # 3 da manhã no Brasil
       
 jobs:
   post:
@@ -21,7 +18,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f python/requirements.txt ]; then pip install -r python/requirements.txt; fi
-      - name: Run scrapy for Electrek
+      - name: Run scrapy for all sources
         run: |
           cd python/scraper/eletrificado
           scrapy crawl electrek -O ../../electrek.json
