--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,6 @@ NUXT_AUTH0_ISSUER=https://**********.us.auth0.com
 NUXT_STRIPE_SECRET_KEY=sk_**********
 # URL to redirect the user after successful checkout
 NUXT_STRIPE_SUCCESS_URL=http://localhost:3000
+
+# Google Ads
+NUXT_GTAG_ID=**********
